[project]
name = "fire-edits-club"
version = "0.1.0"
description = "Mirror @EditsGoesHard from X to YouTube Shorts + Instagram Reels"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
    "google-genai>=2.6",
    "requests>=2.32",
]
